--- a/Web_BanSach/bin/Web_BanSach.dll.config
+++ b/Web_BanSach/bin/Web_BanSach.dll.config
@@ -46,7 +46,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="QL_SACHEntities" connectionString="metadata=res://*/QL_Sach.csdl|res://*/QL_Sach.ssdl|res://*/QL_Sach.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=QL_SACH;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="QL_SACHEntities" connectionString="metadata=res://*/QL_Sach.csdl|res://*/QL_Sach.ssdl|res://*/QL_Sach.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=THUANPHAT;Initial Catalog=QL_SACH;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
